# discoon-malware

./: Cargo.toml  README.md
assets/: inject.js  upload.php
encrypt-macro/: Cargo.toml
encrypt-macro/src/: lib.rs
src/: browser.rs  constants.rs  crypto.rs  discord.rs  inject.js  lib.rs  main.rs  settings.rs  upload.php
